--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
     height: 100vh;
     position: relative;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar {
@@ -24,6 +26,17 @@
     letter-spacing: 5px;
     font-size: 20px;
     color: #e0dede;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar__logo > img {
+    max-height: 6vh;
+    margin-right: 15px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    padding: 2px 6px;
 }
 
 .navbar__links {
@@ -37,7 +50,7 @@
     color: #e0dede;
     text-decoration: none;
     letter-spacing: 3px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
 }
 
@@ -48,13 +61,72 @@
     cursor: pointer;
 }
 
+#home {
+    display: flex;
+    gap: 50px;
+    flex-grow: 1;
+    align-self: center;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+}
+
+.home__avatar {
+    border-radius: 50%;
+    width: 40%;
+    height: auto;
+    border: 2px solid #5464bd;
+    box-shadow: 0 0 20px rgba(84, 100, 189, 0.6);
+}
+
+.home__description {
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.home__description__logo {
+    border: 5px solid #000;
+    border-radius: 4px;
+    padding: 4px 12px;
+}
+
+.home__description__name {
+    font-size: 42px;
+    text-align: center;
+    margin: 30px 0;
+    color: #5464bd;
+    font-weight: bold;
+}
+
+.home__description__role {
+    font-size: 24px;
+    text-align: center;
+    color: #797676;
+    margin-top: 10px;
+}
+
 @media screen and (max-width: 1024px) {
     .navbar__links {
         width: 50%;
     }
+
+    .navbar__logo > h4 {
+        display: none;
+    }
+
+    .home__description__logo {
+        width: 70%;
+    }
 }
 
 @media screen and (max-width: 768px) {
+    .navbar__logo > h4 {
+        display: none;
+    }
+
     .navbar__links {
         position: absolute;
         right: 0;
@@ -91,5 +163,29 @@
 
     .navbar__links--active {
         transform: translateX(0%);
+    }
+
+    #home {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 0;
+    }
+
+    .home__logo {
+        align-self: center;
+    }
+
+    .home__avatar {
+        width: 60%;
+    }
+
+    .home__description {
+        align-self: center;
+    }
+
+    .home__description__logo {
+        width: 60%;
     }
 }
