--- a/css/style.css
+++ b/css/style.css
@@ -2,23 +2,27 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .app {
-    height: 100vh;
-    position: relative;
-    overflow-x: hidden;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .navbar {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 8vh;
+    height: 8vh;
     font-family: 'Poppins', sans-serif;
     background: #5464bd;
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
+    box-shadow: 0 5px 20px #2e3766;
 }
 
 .navbar__logo {
@@ -29,6 +33,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transform: translateX(-100vh);
+    animation: fromLeft 1.8s linear forwards;
+    animation-delay: 0.6s
 }
 
 .navbar__logo > img {
@@ -44,6 +51,9 @@
     list-style: none;
     width: 30%;
     justify-content: space-around;
+    transform: translateX(100vh);
+    animation: fromRight 0.8s linear forwards;
+    animation-delay: 0.3s;
 }
 
 .navbar__links a {
@@ -59,28 +69,30 @@
     font-size: 24px;
     display: none;
     cursor: pointer;
+    transform: translateX(100vh);
+    animation: fromRight 1s linear forwards;
+    animation-delay: 1s;
 }
 
-#home {
+.section {
+    padding-top: 8vh;
     display: flex;
-    gap: 50px;
-    flex-grow: 1;
-    align-self: center;
-    width: 70%;
-    justify-content: center;
+    width: 80%;
+    justify-content: space-around;
     align-items: center;
+    min-height: 100vh;
+    font-family: 'Poppins', sans-serif;
+    flex-wrap: wrap;
 }
 
 .home__avatar {
     border-radius: 50%;
     width: 40%;
     height: auto;
-    border: 2px solid #5464bd;
-    box-shadow: 0 0 20px rgba(84, 100, 189, 0.6);
+    animation: avatar 2s linear infinite;
 }
 
 .home__description {
-    font-family: 'Poppins', sans-serif;
     letter-spacing: 5px;
     display: flex;
     flex-direction: column;
@@ -91,6 +103,7 @@
     border: 5px solid #000;
     border-radius: 4px;
     padding: 4px 12px;
+    width: 60%;
 }
 
 .home__description__name {
@@ -106,6 +119,44 @@
     text-align: center;
     color: #797676;
     margin-top: 10px;
+    text-shadow: 0 5px 6px rgba(141, 137, 137, 0.7);
+}
+
+.about__avatar {
+    border-radius: 50%;
+    width: 30%;
+    height: auto;
+    align-self: flex-start;
+    margin-top: -40px;
+    box-shadow: 0 0 10px rgba(84, 100, 189, 0.6);
+}
+
+.about__title {
+    font-family: 'Indie Flower', cursive;
+    font-size: 7vh;
+    font-weight: bold;
+    color: #454c8d;
+    flex: 1 0 100%;
+    text-shadow: 3px 5px 5px rgba(65, 64, 64, 0.7);
+}
+
+.about__description {
+    flex-basis: 60%;
+    align-self: flex-start;
+    font-size: 20px;
+    color: #303030;
+    padding-right: 15px;
+    text-align: justify;
+    letter-spacing: 2px;
+    line-height: 1.5;
+}
+
+.about__description p {
+    margin-bottom: 20px;
+}
+
+.about__description p::first-letter {
+    margin-left: 30px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -165,16 +216,10 @@
         transform: translateX(0%);
     }
 
-    #home {
+    .section {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 20px 0;
-    }
-
-    .home__logo {
-        align-self: center;
+        width: 90%;
     }
 
     .home__avatar {
@@ -187,5 +232,55 @@
 
     .home__description__logo {
         width: 60%;
+    }
+
+    .about__avatar {
+        display: none;
+    }
+}
+
+@keyframes avatar {
+    0% {
+        box-shadow: 0 0 20px rgba(84, 100, 189, 0.6);
+    }
+
+    33% {
+        box-shadow: 0 0 60px rgba(84, 100, 189, 0.8);
+    }
+
+    66% {
+        box-shadow: 0 0 60px rgba(84, 100, 189, 0.8);
+    }
+
+    100% {
+        box-shadow: 0 0 20px rgba(84, 100, 189, 0.6);
+    }
+}
+
+@keyframes fromLeft {
+    0% {
+        transform: translateX(-100vh);
+    }
+
+    70% {
+        transform: translateX(10vh);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes fromRight {
+    0% {
+        transform: translateX(100vh);
+    }
+
+    70% {
+        transform: translateX(-10vh);
+    }
+
+    100% {
+        transform: translateX(0);
     }
 }
