--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    background: #f3f3f3;
 }
 
 .navbar {
