--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,12 @@
     width: 100%;
     z-index: 9999;
     box-shadow: 0 5px 20px #2e3766;
-    transition: 1s;
+    transition: all 1s ease;
 }
 
 .navbar.small {
     height: 5vh;
-    transition: 1s;
+    transition: all 1s ease;
 }
 
 .navbar.small .navbar__logo > img {
@@ -88,29 +88,45 @@
 }
 
 .section {
-    padding-top: 8vh;
+    padding: 10vh 20px;
     display: flex;
-    width: 80%;
+    width: 85%;
     justify-content: space-around;
-    align-items: center;
+    align-content: flex-start;
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
     flex-wrap: wrap;
 }
 
 .section__title {
+    align-self: flex-start;
+    margin-bottom: 20px;
     font-family: 'Indie Flower', cursive;
     font-size: 4vh;
     font-weight: bold;
     color: #454c8d;
     flex: 1 0 100%;
     text-shadow: 3px 5px 5px rgba(65, 64, 64, 0.7);
+    width: 100%;
+}
+
+.section .subsection:first-child {
+    flex: 1 1 50%;
+}
+
+.section .subsection:last-child {
+    flex: 1 1 40%;
+    margin-left: 40px;
+}
+
+#home {
+    align-content: center;
 }
 
 .home__avatar {
     border-radius: 50%;
     width: 40%;
-    height: auto;
+    height: 40%;
     animation: avatar 2s linear infinite;
 }
 
@@ -119,13 +135,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
 }
 
 .home__description__logo {
     border: 5px solid #000;
     border-radius: 4px;
     padding: 4px 12px;
-    width: 60%;
+    width: 50%;
 }
 
 .home__description__name {
@@ -149,7 +166,6 @@
     width: 30%;
     height: auto;
     align-self: flex-start;
-    margin-top: -40px;
     box-shadow: 0 0 10px rgba(84, 100, 189, 0.6);
 }
 
@@ -158,7 +174,6 @@
     align-self: flex-start;
     font-size: 20px;
     color: #464646;
-    padding-right: 15px;
     text-align: justify;
     letter-spacing: 2px;
     line-height: 1.5;
@@ -170,12 +185,6 @@
 
 .about__description p::first-letter {
     margin-left: 30px;
-}
-
-.timeline {
-    align-self: flex-start;
-    padding-top: 100px;
-    flex: 1 1 60%;
 }
 
 .timeline__separator {
@@ -219,17 +228,6 @@
 
 .timeline__item__place {
     text-align: right;
-}
-
-.knowledge {
-    align-self: flex-start;
-    padding-top: 100px;
-    flex: 1 1 30%;
-    margin-left: 80px;
-}
-
-.knowledge .section__title {
-    margin-bottom: 40px;
 }
 
 .knowledge p {
@@ -288,8 +286,124 @@
     transition: 2s;
 }
 
+.contact__form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact__input-group {
+    margin: 20px 0;
+    position: relative;
+    height: 55px;
+    width: 100%;
+    overflow: hidden;
+    font-size: 18px;
+    color: #575757;
+    font-family: 'Poppins', sans-serif;
+}
+
+.contact__input-group.textarea {
+    height: 120px;
+}
+
+.contact__text-input {
+    border: none;
+    outline: none;
+    background: none;
+    height: 100%;
+    width: 100%;
+    padding-top: 20px;
+    font-size: 18px;
+    color: #575757;
+    font-family: 'Poppins', sans-serif;
+    position: relative;
+}
+
+.textarea .contact__text-input {
+    resize: none;
+}
+
+.contact__label {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.contact__label__content {
+    position: absolute;
+    left: 0;
+    top: 30px;
+    transition: transform 0.5s ease;
+}
+
+.contact__label::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    border-bottom: 2px solid #d8d8d8;
+    z-index: -1;
+}
+
+.contact__label::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    border-bottom: 2px solid #6e77c7;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease;
+}
+
+.contact__text-input:focus + .contact__label .contact__label__content {
+    transform: translateY(-150%);
+}
+
+.contact__text-input:focus + .contact__label::after {
+    transform: translateX(0);
+}
+
+.contact__text-input:valid + .contact__label .contact__label__content {
+    transform: translateY(-150%);
+}
+
+.contact__send-button {
+    border: 1px solid #5464bd;
+    background: none;
+    padding: 12px 8px;
+    margin-top: 25px;
+    cursor: pointer;
+    color: #575757;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    transition: all 0.2s linear;
+}
+
+.contact__send-button:hover {
+    background: #5464bd;
+    color: #e0dede;
+}
+
+.social-media__item a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #575757;
+}
+
+.social-media__item a span {
+    margin-left: 10px;
+}
+
 .footer {
-    height: 8vh;
+    height: 6vh;
     width: 100%;
     background: #5464bd;
     color: #e0dede;
@@ -297,10 +411,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    box-shadow: 0 0 20px 1px #2e3766;
 }
 
 .footer img {
-    max-height: 5vh;
+    max-height: 4vh;
     margin-right: 10px;
     border: 1px solid #e0dede;
     border-radius: 4px;
@@ -317,12 +435,16 @@
     }
 
     .home__description__logo {
-        width: 70%;
+        width: 60%;
     }
 
-    .curriculum {
-        display: flex;
-        flex-direction: column;
+    .section .subsection:first-child {
+        flex: 0 0 100%;
+    }
+
+    .section .subsection:last-child {
+        flex: 0 0 100%;
+        margin-left: 0;
     }
 }
 
@@ -388,7 +510,13 @@
     }
 
     .about__avatar {
-        display: none;
+        align-self: center;
+        margin-bottom: 20px;
+        order: 0;
+    }
+
+    .about__description {
+        order: 1;
     }
 
     .timeline, .knowledge {
